cross-table.css: nowrap for results (opera issue)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@7282 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/resources/css/cross-table.css
+++ b/content/resources/css/cross-table.css
@@ -9,4 +9,5 @@
 
 .ft-cross-table-div  td{
 	background-color: white;
+	white-space: nowrap;
 }
